--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@ nav_exclude:                                            # The following paths ar
   - pages/tags.html
   - pages/404.html
   - pages/index.md
-  - documentation/partials/**                           # For Documentation Only
+  - pages/projects/professional.md
+  - pages/projects/coursework.md
 
 
 ### Author Info ###
