--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,17 +1,14 @@
-- title: Student, Harvard CS
-  from: 2014
-  to: 2018
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+- title: Software Engineer<br>Samsung R&D Institute, Bangladesh
+  location: Monem Business District, 111 Bir Uttam CR Dutta Rd, Dhaka 1205
+  from: May, 2019
+  to: Present
+  description: Working on features implementation of a complex software project.<br>
+               Designing a model of delta data transfer to cloud server for the software project.<br>
+               Enabling cloud synchronization operations of the data for the software project.<br>
+               Bug fixing, quality testing, issue reporting, technical writing, and diagraming.
 
-- title: Software Engineer, Google, UK
-  from: 2018
-  to: present
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+- title: Undergraduate Student<br> Bangladesh University of Engineering and Technology
+  location: Dhaka, Bangladesh
+  from: February, 2015
+  to: April, 2019
+  description: Department of Computer Science and Engineering
