tab name edited

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description         : >-
                       <b>Software Engineer</b> <br/>
                       Samsung R&D Institute, Bangladesh
 baseurl             : ""                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
-repository          : YoussefRaafatNasry/portfolYOU     # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
+repository          : surzoprovakar          # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : YoussefRaafatNasry/portfolYOU
 
 
@@ -66,7 +66,7 @@ disqus:
 
 ### Analytics ###
 analytics:
-  enabled: false                                        # Set true to enable analytics
+  enabled: true                                        # Set true to enable analytics
   google:
     tracking_id: your-google-tracking-id
 
