--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,6 @@ main:
   - title: "Skills"
     url: /skills/
         
-  - title: "CV"
-    url: /cv/
+  - title: "Resume"
+    url: /resume/
     
