--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=Fd8CN6AAAAAJ&hl=en"
   email            : "provakar@vt.edu"
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  researchgate     :  "https://www.researchgate.net/profile/Provakar-Mondal-2?ev=hdr_xprf"
   uri              :
   bitbucket        :
   codepen          :
