update projects layout and add resume

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,6 @@ main:
   - title: "Skills"
     url: /skills/
         
-  # - title: "Resume"
-  #   url: /resume/
+  - title: "Resume"
+    url: /resume/
     
