update skills layout

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,6 @@ main:
   - title: "Resume"
     url: /resume/
 
-  - title: "Bio"
-    url: /bio/
+  - title: "Background"
+    url: /background/
     
