include 2 new publications
update layout a for research publications and news

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,9 +12,9 @@ main:
   - title: "Skills"
     url: /skills/
         
-  - title: "Resume"
+  - title: "CV & Resume"
     url: /resume/
 
-  - title: "Background"
+  - title: "Vitae"
     url: /background/
     
