apply \textsc for the page titles and change color

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   - title: "Skills"
     url: /skills/
         
-  - title: "CV & Resume"
+  - title: "CV and Resume"
     url: /resume/
 
   - title: "Vitae"
