add prelim pass news

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Provakar Mondal"
   avatar           : "provakar.jpg"
-  bio              : "<b>Graduate Research Assistant</b>"
+  bio              : "<b>CS PhD Candidate</b>"
   employer         : "Software Innovations Lab"
   affiliation      : "Virginia Tech"
   location         : "Blacksburg, VA, USA"
